--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "siraj": "file:"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
